--- a/docs/sneeit-leads-blogspot.css
+++ b/docs/sneeit-leads-blogspot.css
@@ -42,16 +42,28 @@ img {
 	width: 728px;
 }
 .brand a {
-	text-decoration: none;
-	font-size: 80px;
-	color: #999;
+	text-decoration: none;	
+	height: 90px;
+	color: black;;
 	display: block;
-	line-height: 90px;
 	float: left;
 	font-family: Impact;
+	position: relative;
 }
 .brand a b {
-	color: #F58B35;
+	font-size: 50px;
+	line-height: 70px;
+	display: block;
+	letter-spacing: -2px;
+	font-weight: normal;
+}
+.brand a i {
+	font-size: 20px;
+	line-height: 1em;
+	position: absolute;
+	bottom: 10px;
+	right: 0;
+	color: orange;	
 }
 .main {
 	background: white;
