--- a/docs/sneeit-leads-blogspot.css
+++ b/docs/sneeit-leads-blogspot.css
@@ -37,7 +37,7 @@ img {
 .brand {	
 	padding: 30px 0 25px 0;
 }
-.brand-ads {
+.brand-lead {
 	float: right;
 	width: 728px;
 }
@@ -438,7 +438,7 @@ img {
 	max-width: 365px;
 	min-height: 16px;
 }
-.index-ads {	
+.index-lead {	
 	position: relative;
 	padding: 16px 0;
 	border-bottom: 1px solid #e0e0e0;
@@ -475,9 +475,12 @@ img {
 		text-align: center;
 		font-size: 50px;
 		line-height: 1em;
-		margin: 0 0 10px 0;	
+		margin: 0 0 10px 0;			
 	}
-	.brand-ads {
+	.brand a i {
+		width: 100%;
+	}
+	.brand-lead {
 		float: none;
 		margin: auto;
 	}
@@ -499,7 +502,7 @@ img {
 	.top > .w > * {
 		max-width: 360px;
 	}
-	.brand-ads {
+	.brand-lead {
 		width: 468px;
 	}
 	.menu {
@@ -542,7 +545,7 @@ img {
 	}
 }
 @media screen and (max-width: 467px) {
-	.brand-ads {
+	.brand-lead {
 		width: auto;
 	}
 }
