Replace All Ads and Iframes

--- a/docs/sneeit-leads-blogspot.css
+++ b/docs/sneeit-leads-blogspot.css
@@ -443,12 +443,12 @@ img {
 	padding: 16px 0;
 	border-bottom: 1px solid #e0e0e0;
 }
-.post-ads-top {
+.post-lead-top {
 	float: right;
 	margin: 5px 0 20px 30px;
 	width: 350px;
 }
-.post-ads-bot {
+.post-lead-bot {
 	margin: 20px auto 0 auto;	
 }
 
