--- a/docs/sneeit-leads-blogspot.css
+++ b/docs/sneeit-leads-blogspot.css
@@ -257,9 +257,19 @@ img {
 	margin: 0 auto 15px auto;
 	border: 1px solid #e0e0e0;
 }
+#post-body-inner .wp-caption img {
+	margin-bottom: 0;
+}
+#post-body-inner .wp-caption {
+	margin-bottom: 20px;
+	text-align: center;
+	font-size: 12px;
+	color: #999;
+}
 #post-body-inner .alignnone,
 #post-body-inner .aligncenter {
-	margin: auto;
+	margin-left: auto;
+	margin-right: auto;
 	text-align: center;
 }
 #post-body-inner img.alignleft,
@@ -648,8 +658,3 @@ a.scroll-up:hover {
 		max-width: 240px;
 	}
 }
-/*
-solve feature problem in: https://wpget.blogspot.com/2017/11/variety-and-inclusion-at-wpget-place-we.html
-also solve wp-caption aligncenter alignnone alignleft alignright classes 
-blockquote style
-*/
