--- a/docs/sneeit-leads-blogspot.css
+++ b/docs/sneeit-leads-blogspot.css
@@ -254,7 +254,8 @@ img {
 	margin: 10px 0;
 }
 #post-body-inner img {
-	margin: 0 auto 15px auto;
+	display: block;
+	margin: auto;
 	border: 1px solid #e0e0e0;
 }
 #post-body-inner .wp-caption img {
@@ -270,8 +271,7 @@ img {
 #post-body-inner .aligncenter {
 	margin-left: auto;
 	margin-right: auto;
-	text-align: center;
-	display: block;
+	text-align: center;	
 }
 #post-body-inner img.alignleft,
 #post-body-inner .alignleft {
