--- a/docs/sneeit-leads-blogspot.css
+++ b/docs/sneeit-leads-blogspot.css
@@ -362,7 +362,12 @@ img {
 #sidebar .widget {
 	margin: 30px 0 0 0;
 }
-
+#sidebar #PopularPosts1 {
+	margin-top: 20px;
+}
+#sidebar > iframe {
+	margin-top: 30px;
+}
 #search input {
 	padding: 10px;
 	box-sizing: border-box;
