Hide some for new site

--- a/docs/sneeit-leads-blogspot.css
+++ b/docs/sneeit-leads-blogspot.css
@@ -484,6 +484,10 @@ img {
 	text-decoration: underline!important;
 }
 
+.yt-sbscrb-bar, #wpvq-big-loader {
+	display: none;
+}
+
 /* ads manager */
 .top > .w > *,
 .main > .menu > *,
