--- a/docs/sneeit-leads-blogspot.css
+++ b/docs/sneeit-leads-blogspot.css
@@ -7,6 +7,10 @@ img {
 	max-width: 100%;
 	height: auto;
 }
+iframe[src*="youtu"] {
+	display: block;
+	width: 100%;
+}
 .clear {
 	float: none;
 	clear: both;
